# Shaker

Stranger-Social/: AppDelegate.h  AppDelegate.m  Info.plist  Stranger-Social-Prefix.pch  main.m  test.json
Stranger-Social.xcodeproj/: project.pbxproj
Stranger-Social.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Stranger-Social/Base.lproj/: LaunchScreen.xib
Stranger-Social/Customize/: SPBaseBubbleChatViewCustomize.m  SPBubbleViewModelCustomize.m  SPInputViewPluginCustomize.m
Stranger-Social/MainLogic/: SPKitExample.h  SPKitExample.m  SPUtil.h  SPUtil.m
Stranger-Social/WXFrameworks/SecurityGuardSDK.framework/Versions/A/Resources/: Android.mk  CMakeLists.txt  Info.plist
Stranger-Social/WXFrameworks/WXOUIModuleResources.bundle/: OpenIM-Theme.plist  WXOLocationViewController.nib
Stranger-Social/categoary/: NSURLRequest+Url.m
Stranger-Social/common/: Common.h
Stranger-Social/controller/ContactListViewController/: ContactListViewController.h  ContactListViewController.m
Stranger-Social/controller/DiscoverViewController/: DiscoverViewController.h  DiscoverViewController.m  LookUpViewController.h  LookUpViewController.m
Stranger-Social/controller/ProfileViewController/: AlterPhoneViewController.m  AlterPwdViewController.m  ProfileViewController.h  ProfileViewController.m
Stranger-Social/controller/other/: MainViewController.m  NextRegisterViewController.m  (+4 more)
Stranger-Social/modern/: User.h  User.m
Stranger-Social/tool/: UserTool.h  UserTool.m
Stranger-Social/view/: DockItem.m
Stranger-SocialTests/: Stranger_SocialTests.m
(+123 files in other folders)
